# AI2Pot

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt  setup.py
ai2pot.egg-info/: PKG-INFO  (+3 more)
source/: CMakeLists.txt
source/core/include/: AlignedArray.h  arrayUtils.h  hardware.h  vec3Operation.h  vecx.h
source/core/tests/: test_AlignedArray.cc  test_arrayUtils.cc  test_vec3Operation.cc  test_vecx.cc
source/descriptor/ace/: CMakeLists.txt
source/descriptor/ace/include/: angularUtils.h  descriptor.h  nep_descriptor.h  radialBasis.h  sinlm.h
source/descriptor/ace/tests/: test_angularUtils.cc  test_descriptor.cc  test_nep_descriptor.cc  test_radialBasis.cc  test_sinlm.cc
source/descriptor/correction/: CMakeLists.txt
source/descriptor/correction/gpu/: CMakeLists.txt
source/descriptor/correction/include/: zbl.h
source/descriptor/correction/tests/: test_group_zbl.cc  test_pair_zbl.cc  test_zbl.cc
source/descriptor/deepmd/: CMakeLists.txt
source/descriptor/deepmd/bind/: envMatrixOp_bind.cc
source/descriptor/deepmd/include/: dp_utils.h  envMatrix.h  envMatrixOp.h  se.h  se4pw.h  se4pw_op.h
source/descriptor/deepmd/src/: envMatrixOp.cc  se4pw_op.cc
source/descriptor/deepmd/test/: demo.cc  demo_se4pw.cc  test_dp_utils.cc  test_envMatrix.cc  test_envMatrixOp.cc  test_se.cc  test_se4pw.cc  test_se4pw_op.cc  test_se_lmp.cc
source/descriptor/fitutils/: CMakeLists.txt
source/descriptor/fitutils/bind/: fitutils_bind.cc  fitutils_bind_cpu.cc  fitutils_bind_cuda.cc
source/descriptor/fitutils/gpu/: CMakeLists.txt
source/descriptor/fitutils/include/: descriptorsStatistics.h  descriptorsStatisticsOp.h  descriptorsStatisticsOp_cpu.h  descriptorsStatisticsOp_cuda.h  targetStatistics.h  targetStatisticsOp.h  targetStatisticsOp_cpu.h  targetStatisticsOp_cuda.h
source/descriptor/fitutils/src/: descriptorsStatisticsOp.cc  descriptorsStatisticsOp_cpu.cc  descriptorsStatisticsOp_cuda.cc  targetStatisticsOp.cc  targetStatisticsOp_cpu.cc  targetStatisticsOp_cuda.cc
source/descriptor/fitutils/tests/: test_AllTypeDescriptorsStatistics.cc  test_EachTypeDescriptorsStatistics.cc  test_targetStatistics.cc
source/descriptor/mtp/: CMakeLists.txt
source/descriptor/mtp/include/: level.h  mtpBModule.h  mtpLevel.h  mtpMAngularOp.h  mtpMModule.h  mtpMRadial.h  mtpMRadialOp.h  mtpMRadial_de.h
source/descriptor/mtp/src/: mtpBModule.cc  mtpLevel.cc  mtpMAngularOp.cc  mtpMModule.cc  mtpMRadialOp.cc
source/descriptor/mtp/tests/: test_level.cc  test_mtpBModule.cc  test_mtpLevel.cc  test_mtpMAngularOp.cc  test_mtpMModule.cc  test_mtpMRadial.cc  test_mtpMRadialOp.cc  test_mtpMRadial_de.cc  test_mtpParam.cc
source/descriptor/mtpr/: CMakeLists.txt  READMD.md  README.md
source/descriptor/mtpr/bind/: mtpr_bind.cc  mtpr_bind_cpu.cc  mtpr_bind_cuda.cc
source/descriptor/mtpr/gpu/: CMakeLists.txt
source/descriptor/mtpr/include/: 1.md  basis.h  linearMtp.h  linearMtpLoss.h  linearMtpLoss_cpu_launcher.h  linearMtpOp.h  linearMtpOp_cpu.h  linearMtpOp_cuda.h  linearMtp_cpu_launcher.h  linear_mtp_gram_and_cross.h  linear_mtp_gram_and_cross_op.h  linear_mtp_gram_and_cross_op_cpu.h  linear_mtp_gram_and_cross_op_cuda.h  mtpBasis.h  mtpBasisGrad.h  mtpBasisGradOp.h  mtpBasisOp.h  mtpBasisToEFV.h  mtpLoss.h  mtpParam.h  mtpParamOp.h  schmidt_orth.h  schmidt_orth_op.h  schmidt_orth_op_cpu.h  schmidt_orth_op_cuda.h
source/descriptor/mtpr/src/: linearMtpOp.cc  linearMtpOp_cpu.cc  linearMtpOp_cuda.cc  linear_mtp_gram_and_cross_op.cc  linear_mtp_gram_and_cross_op_cpu.cc  linear_mtp_gram_and_cross_op_cuda.cc  mtpBasisGradOp.cc  mtpBasisOp.cc  mtpParam.cc  mtpParamOp.cc  schmidt_orth_op.cc  schmidt_orth_op_cpu.cc  schmidt_orth_op_cuda.cc
source/descriptor/mtpr/tests/: plot_der_coeff.py  plot_der_xij.py  plot_der_yij.py  plot_der_zij.py  test_basis.cc  test_linearMtp.cc  test_linearMtpLoss.cc  test_linearMtpLoss_cpu_launcher.cc  test_linearMtpOp.cc  test_linearMtp_cpu_launcher.cc  test_linear_mtp_gram_and_cross.cc  test_mtpBasis.cc  test_mtpBasisGrad.cc  test_mtpBasisGradOp.cc  test_mtpBasisOp.cc  test_mtpParam.cc  test_mtpParamOp.cc  test_schmidt_orth.cc
source/descriptor/nep/: CMakeLists.txt
source/descriptor/nep/bind/: nep_bind.cc  nep_bind_cpu.cc  nep_bind_cuda.cc
source/descriptor/nep/gpu/: CMakeLists.txt
source/descriptor/nep/include/: 1.md  basis.h  nep.h  nepBasis.h  nepLoss.h  nepLoss_cpu_launcher.h  nepOp.h  nepOp_cpu.h  nepOp_cuda.h  nep_cpu_launcher.h  nep_utilities.h
source/descriptor/nep/src/: nepOp.cc  nepOp_cpu.cc  nepOp_cuda.cc
source/descriptor/nep/tests/: test_Blm.cc  test_basis.cc  test_nep.cc  test_nepBasis.cc  test_nepLoss.cc  test_nepLoss_cpu_launcher.cc  test_nep_cpu_launcher.cc  test_nep_index.cc  test_nep_utilities.cc
source/descriptor/nnmtp/: CMakeLists.txt
source/descriptor/nnmtp/MTP_templates/: README.md
source/descriptor/nnmtp/bind/: nnmtp_bind.cc
source/descriptor/nnmtp/gpu/: CMakeLists.txt
source/descriptor/nnmtp/include/: basis.h  mtpBasis.h  mtpParam.h  mtpParamOp.h  nnMtp.h  nnMtpLoss.h  nnMtpOp.h  nnMtpOp_cpu.h  nnMtpUtils.h  tempCodeRunnerFile.h
source/fvt/: CMakeLists.txt  README.md
source/fvt/bind/: force_sr_op_bind.cc  fvt_sr_op_bind.cc
source/fvt/gpu/: CMakeLists.txt
source/fvt/include/: force_sr.h  force_sr_op.h  virial_sr.h  virial_sr_op.h
source/fvt/src/: force_sr_op.cc  virial_sr_op.cc
source/fvt/test/: test_force_sr.cc  test_force_sr_op.cc  test_virial_sr.cc  test_virial_sr_op.cc
source/gst/: CMakeLists.txt
source/gst/bind/: altbc_bind.cc  altbc_bind.h  gst_bind.cc  order_parameter_bind.h
source/gst/include/: altbc.h  order_parameter.h
source/gst/test/: test_altbc.cc
source/include/: matersdk.h
source/nblist/: CMakeLists.txt
source/nblist/_bind/: nblist_bind.cc
source/nblist/bind/: nblist.cc  nblist_bind.cc  nblist_bind.h
source/nblist/include/: CpuNeighborList.h  binLinkedList.h  neighborList.h  structure.h
source/nblist/src/: CpuNeighborList.cc
source/nblist/tests/: test_CpuNeighborList.cc  test_basicStructureInfo.cc  test_binLinkedList.cc  test_neighborList.cc  test_structure.cc
(+328 files in other folders)
